# 2026_pilota

./: .gitignore  INGESTION_IMPLEMENTATION.md  README.md  UI-UX-AUDIT-REPORT.md  VERIFICATION_REPORT.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  SCRAPING_GUIDE.md  ingest_with_players.py  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/models/: __init__.py
backend/app/routers/: scraping.py  stats.py
backend/app/schemas/: club.py  competition.py  competition_year.py  court.py  enums.py  ffpb.py  game.py  game_score.py  organizer.py  player.py  player_club_history.py  player_stat.py  reference.py  score_entry.py  scraping.py  team.py  team_player.py
backend/app/services/: __init__.py  championship_parser.py  ctpb_filters_parser.py  ctpb_parser.py  ctpb_pipeline.py  engagements_scraper.py  ffpb_client.py  ffpb_filters.py  ffpb_parser.py  html_game_parser.py  ingestion_service.py  player_extraction.py  scraper.py  stats_service.py
backend/docs/: HTML_PARSING_SUMMARY.md  TEST_FIXTURES.md
backend/scripts/: debug_html.py  debug_scraper.py  run_scraper.py  save_fixtures.py  save_html_fixture.py  test_ingestion.py
backend/tests/: conftest.py  test_api_endpoints.py  test_championship_parser.py  test_ctpb_player_extraction.py  test_engagements_scraper.py  test_fixture_system.py  test_html_game_parser.py  test_html_parser.py  test_ingestion_service.py  test_known_issues.py  test_player_ingestion.py  test_scraper_with_fixtures.py
backend/tests/fixtures/ctpb/: competition_20260102.html  games.json  (+6 more)
(+128 files in other folders)
